--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
             android:theme="@style/Theme.PawtyTime" />
 
         <activity
+            android:name=".PawtyPeopleActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PawtyTime"/>
+
+        <activity
             android:name=".MainActivity"
             android:exported="false"/>
     </application>
