--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +17,6 @@
         <activity
             android:name=".SplashActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.PawtyTime">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +31,11 @@
 
         <activity
             android:name=".PawtyPeopleActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PawtyTime"/>
+
+        <activity
+            android:name=".PawtyPetsActivity"
             android:exported="false"
             android:theme="@style/Theme.PawtyTime"/>
 
