Added Create Event screen structure and navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,10 @@
             android:exported="false"
             android:theme="@style/Theme.PawtyTime" />
 
+        <activity
+            android:name=".CreateEventActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
