--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,9 @@
             android:exported="false"
             android:theme="@style/Theme.PawtyTime" />
 
+        <activity android:name=".SchedulePlaydateActivity" />
+
+
     </application>
 
 </manifest>
