--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,10 @@
             android:name=".CreateEventActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".EventDetailActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
