--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,8 @@
             android:name=".EventDetailActivity"
             android:exported="false" />
 
+        <activity android:name=".ViewPetProfileActivity" />
+
 
 
     </application>
